--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@octokit/rest": "^21.0.0",
     "@supabase/supabase-js": "^2.46.2",
     "@tailwindcss/typography": "^0.5.13",
-    "@upstash/redis": "^1.28.2",
+    "@upstash/redis": "^1.34.4",
     "ai": "^2.2.32",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.1",
@@ -39,6 +39,7 @@
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "react-terminal": "^1.4.5",
     "reading-time": "^1.5.0",
     "recharts": "^2.12.7",
     "remark": "^15.0.1",
@@ -46,7 +47,9 @@
     "remark-html": "^16.0.1",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.2.1",
-    "ts-node": "^10.9.2"
+    "terminal-in-react": "^4.3.1",
+    "ts-node": "^10.9.2",
+    "xterm": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
