Fix build script and adjust minor formatting in LICENSE
Updated the build script in `package.json` to run `npm run dev` before building. Also removed unnecessary trailing whitespace in the LICENSE file to maintain consistency.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm run start && next build",
+    "build": "npm run dev  && next build",
     "generate": "npx ts-node ./scripts/generate.ts",
     "start": "next start",
     "lint": "next lint"
