Update build script and bump langchain dependency
Replaced 'npm run dev' with 'npm run generate' in the build script for improved workflow. Upgraded `langchain` package from version 0.1.11 to 0.1.37 for access to the latest features and bug fixes.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm run dev  && next build",
+    "build": "npm run generate  && next build",
     "generate": "npx ts-node ./scripts/generate.ts",
     "start": "next start",
     "lint": "next lint"
@@ -28,7 +28,7 @@
     "gray-matter": "^4.0.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
-    "langchain": "^0.1.11",
+    "langchain": "^0.1.37",
     "lucide-react": "^0.320.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
