--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/supabase-js": "^2.46.2",
     "@tailwindcss/typography": "^0.5.13",
     "@upstash/redis": "^1.34.4",
+    "@vercel/speed-insights": "^1.1.0",
     "ai": "^2.2.32",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.1",
