--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
+    "remark-toc": "^9.0.0",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.2.1",
     "terminal-in-react": "^4.3.1",
