--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,12 +22,12 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
+    - name: Log out from any existing Docker session
+      run: docker logout ghcr.io || true
+
     - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        registry: ghrc.io
-        username: ${{ secrets.GHCR_USERNAME }}
-        password: ${{ secrets.GHCR_TOKEN }}
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $GHCR_USERNAME--password-stdin
+ 
 
     - name: Set up env
       run: |
