--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,8 +26,11 @@ jobs:
       run: docker logout ghcr.io || true
 
     - name: Login to Docker Hub
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $GHCR_USERNAME--password-stdin
- 
+      uses: docker/login-action@v2
+      with:
+        registry: ghrc.io
+        username: ${{ secrets.GHCR_USERNAME }}
+        password: ${{ secrets.GHCR_TOKEN }}
 
     - name: Set up env
       run: |
